# Cosmic-Shooter

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  main.cpp  vcpkg-configuration.json
assets/fonts/: arial.cff
inc/: Bullet.h  Constants.h  Enemy.h  Game.h  GameObjects.h  Player.h
src/: Bullet.cpp  Enemy.cpp  Game.cpp  Player.cpp  main.cpp
